# fashion-portfolio-project

./: .dockerignore  .env.aws.example  .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py
backend/app/: main.py
backend/app/api/: catalog_routes.py
backend/app/catalog/: __init__.py  image_store.py  import_legacy_naver.py  indexer.py  manifest.py
backend/app/core/: config.py  errors.py
backend/app/schemas/: search_schema.py
backend/app/security/: __init__.py  jwt_auth.py  keygen.py
backend/app/services/: fashionclip_service.py  image_validation.py  inference_executor.py  opencv_crop_service.py  qdrant_service.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_image_validation.py  test_inference_executor.py
backend/tests/catalog/: test_manifest.py
catalog/: README.md  manifest.example.json
docs/: API.md  ARCHITECTURE.md  DATA_POLICY.md  MIGRATION_ROADMAP.md
docs/adr/: 0001-service-boundaries.md  0002-catalog-id-search.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: errors.ts  members.ts  search.ts
frontend/src/components/: AuthScreen.tsx  ImageUploadModal.tsx  IntroScreen.tsx  ManualCropper.tsx  ResultGrid.tsx  SearchLoadingOverlay.tsx  SearchScreen.tsx  UploadPanel.tsx
frontend/src/styles/: landing.css
member-service/: Dockerfile  build.gradle.kts
scripts/: smoke-test.ps1
(+34 files in other folders)
